--- a/themes/foundation/store/templates/helper/pagination/pagination-detailed.twig
+++ b/themes/foundation/store/templates/helper/pagination/pagination-detailed.twig
@@ -70,7 +70,7 @@
             {% endif %}
         </ul>
     {% else %}
-        <div class="pull-left">
+        <div class="float-left">
             Showing {{ totalItems }}
             {% trans %}
                 result
