--- a/themes/foundation/store/templates/layout/parts/footer-checkout.twig
+++ b/themes/foundation/store/templates/layout/parts/footer-checkout.twig
@@ -1,7 +1,9 @@
-<div class="row column">
-    <div id="checkout-footer">
-        <a href="{{ routeUrl('page.terms') }}">Terms of Use</a>
-        | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
-        {# @TODO: <?=SITE_COPY?> #}
+<div class="row">
+    <div class="column">
+        <div id="checkout-footer">
+            <a href="{{ routeUrl('page.terms') }}">Terms of Use</a>
+            | <a href="{{ routeUrl('page.privacy') }}">Privacy</a>
+            {# @TODO: <?=SITE_COPY?> #}
+        </div>
     </div>
 </div>
