--- a/themes/foundation/store/templates/cart/estimate-shipping.twig
+++ b/themes/foundation/store/templates/cart/estimate-shipping.twig
@@ -7,13 +7,13 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-sm-12">
+        <div class="column">
             <div class="well well-sm">
                 <h5>Estimate Shipping &amp; Tax</h5>
                 <form action="{{ routeUrl('cart.estimate-shipping') }}" method="post">
                     {{ form.csrf() }}
                     <div class="row">
-                        <div class="form-group col-sm-12">
+                        <div class="form-group column">
                             <label for="shipping-zip5" class="control-label">Zipcode</label>
                             <input type="text"
                                    name="shipping[zip5]"
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="form-group col-sm-12">
+                        <div class="form-group column">
                             <label for="shipping-isResidential" class="radio-inline">
                                 <input type="checkbox"
                                        name="shipping[isResidential]"
@@ -63,7 +63,7 @@
                         <h2>Choose your delivery option:</h2>
                         {% for shipmentRate in shipmentRates %}
                             <div class="row">
-                                <div class="col-sm-12">
+                                <div class="column">
                                     <label class="radio-inline">
 
                                         <input type="radio"
