--- a/themes/foundation/store/templates/cart/parts/totals.twig
+++ b/themes/foundation/store/templates/cart/parts/totals.twig
@@ -48,7 +48,7 @@
                 <div class="container-fluid">
                     {% for cartPriceRule in cart.cartTotal.cartPriceRules %}
                         <div class="row">
-                            <div class="col-sm-12">
+                            <div class="columns">
                                 &nbsp;<i class="fa fa-minus"></i>&nbsp;
                                 {{ cartPriceRule.name }}
                             </div>
@@ -57,7 +57,7 @@
 
                     {% for coupon in cart.cartTotal.coupons %}
                         <div class="row">
-                            <div class="col-sm-10">
+                            <div class="small-10 columns">
                                 <form action="{{ routeUrl('cart.remove-coupon') }}"
                                       method="post"
                                       role="form">
