--- a/themes/foundation/store/templates/page/privacy.twig
+++ b/themes/foundation/store/templates/page/privacy.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="column">
 
                 <h1>PRIVACY STATEMENT</h1>
 
