--- a/themes/foundation/store/templates/page/terms.twig
+++ b/themes/foundation/store/templates/page/terms.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="column">
                 <h1>Terms of Use</h1>
 
                 <h2>Legal Notices</h2>
