--- a/themes/foundation/store/templates/tag/show.twig
+++ b/themes/foundation/store/templates/tag/show.twig
@@ -14,7 +14,7 @@
                     width="100"
                     height="100"
                     style="'width: 100px; height: 100px; margin: 18px"
-                    class="pull-left">
+                    class="float-left">
             </div>
             <div class="col-sm-9">
                 <dl>
